addons/kyverno/policies/edtech-edtech_access_least_privilege-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: edtech-edtech_access_least_privilege
  annotations:
    rulehub.id: edtech.edtech_access_least_privilege
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: "edtech.edtech_access_least_privilege: example validation"
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
